# RefactorNCI

./: README.md
.github/workflows/: main.yml
refactorNCI/: pyproject.toml
refactorNCI/refactornci/: assignment-lists-solutions(1).py  main.py
refactorNCI/tests/: test_node.py
