[tool.poetry]
name = "refactornci"
version = "0.1.0"
description = ""
authors = ["CatMon <90017476+CatMont@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
